Fix vertical line alignment

--- a/tictactoe/style.css
+++ b/tictactoe/style.css
@@ -26,7 +26,7 @@
 .left {
     position: relative;
     right: 15%;
-    top: 50px;
+    top: 85px;
     transform: rotate(90deg);
 }
 
